--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+    margin: 0;
+    padding: 0;
+}
+.job-listing{
+    background-color: aqua;
+    width: 60vw;
+    padding: 10px;
+    border: 2px solid salmon;
+    margin: 5px;
+}
+.job-list-title{
+display: flex;
+background-color: brown;
+align-items:flex-end;
+justify-content: space-between;
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+a{
+    text-decoration: none;
+    color: black;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.job-properties{
+display: flex;
+background-color: purple;
+justify-content: space-between;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#job-status{
+background-color: yellow;
+width: 25vw;
 }
+#job-qualification{
+background-color: orange;
+display: flex;
+justify-content: flex-end;
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+width: 75vw;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+#job-qualification h5{
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 10px;
+    margin-right: 5px ;
+    
+    
 }
