--- a/src/App.css
+++ b/src/App.css
@@ -139,14 +139,86 @@ width: 75vw;
     
     
 }
-
+.form-div{
+    background-color: aquamarine;
+    display: flex;
+    justify-items: center;
+}
 .addForm{
 display: flex;
 flex-direction: column;
-margin: 5px;
+margin: 5px auto;
 padding: 10px;
+width: 70vw;
 }
 .addForm input{
     margin: 5px;
 
+}
+.addForm label{
+    margin: 5px;
+
+}
+
+.job-details{
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(179, 192, 150);
+    border-radius: 15px;
+}
+.details-title{
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: center;
+    background-color: rgb(137, 156, 95);
+    margin: 10px;
+}
+.details-company{
+    /* background-color: rgb(177, 132, 177); */
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+}
+.details-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 10px;
+    padding: 10px;
+    background-color: rgb(137, 156, 95);
+}
+.job-status{
+    display: flex;
+    justify-content: space-between;
+    /* background-color: aquamarine; */
+}
+.job-timing{
+    display: flex;
+    justify-content: space-between;
+}
+.qualifications h4 {
+    
+    margin-left: 0px;
+    padding-left: 0px;
+}
+.qualifications li{
+    padding: 8px 0;
+}
+#remote-style{
+    background-color: rgba(163, 185, 37, 0.555);
+    border: none;
+    width: 25vw;
+    height: 5vh;
+    border-radius: 10px;
+    
+}
+#apply-btn{
+    width: 50vw;
+    height: 35px;
+    margin: 10px auto;
+    border: none;
+    border-radius: 30px;
+    background-color: rgba(163, 185, 37, 0.555);
 }
