--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+*{
+     font-family: "Poppins", sans-serif;
+}
 body{
     margin: 0;
     padding: 0;
@@ -34,7 +42,8 @@ body{
 }
 
 .logo-image{
-    width: 75px;
+    width: 65px;
+    
 }
 .sidebar{
     background-color:rgb(182, 187, 173);
@@ -82,9 +91,8 @@ footer img{
     border-radius: 15px;
     margin-bottom: 10px;
     
-    
-    
-}  
+} 
+
 .button-style{
     display: flex;
     margin: auto 5px;
@@ -94,16 +102,27 @@ border-radius: 10px;
 border: 1px solid rgb(138, 0, 0);
 background-color: transparent;
 color: rgb(138, 0, 0);
-width: 50px;
+width: 60px;
 margin: 0 3px;
+padding: 5px;
+}
+#delete-btn:hover{
+background-color: rgb(138, 0, 0);
+color: white;
+
 }
 #edit-btn{
 border-radius: 10px;
 border: 1px solid green;
 background-color: transparent;
 color: green;
-width: 50px;
+width: 60px;
+padding: 5px;
 
+}
+#edit-btn:hover{
+background-color: green;
+color: white;
 }
 #remote-btn{
     background-color: rgb(220, 220, 77);  
@@ -116,7 +135,9 @@ display: flex;
 /* background-color: brown; */
 align-items:flex-end;
 justify-content: space-between;
-
+}
+.job-list-title h3:hover{
+    text-decoration:underline;
 }
 
 a{
@@ -136,23 +157,57 @@ width: 25vw;
 /* background-color: orange; */
 display: flex;
 justify-content: flex-end;
-
-
 width: 75vw;
 }
+
 #job-qualification h5{
-    border: 1px solid gray;
+    border: 1px solid transparent;
     padding: 10px;
     border-radius: 10px;
     margin-right: 5px ;
     background-color: gainsboro;
+    height: fit-content;
     
     
 }
 .form-div{
-    background-color: aquamarine;
     display: flex;
+    background-color:  rgb(200, 206, 191);
+    border-radius: 30px;
     justify-items: center;
+    
+}
+.form-style{
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50vw;
+    margin: 10px;
+    padding: 10px;
+}
+.form-style label{
+    padding: 5px;
+}
+.form-style input{
+    margin: 10px;
+    border:1px solid transparent;
+    border-radius: 10px;
+    width: 50%;
+    float: right;
+}
+textarea{
+    width: 100%;
+    border:1px solid transparent;
+    border-radius: 10px;
+    
+}
+select{
+margin: 10px;
+    border:1px solid transparent;
+    border-radius: 10px;
+    width: 51%;
+    float: right;
 }
 .addForm{
 display: flex;
@@ -161,13 +216,34 @@ margin: 5px auto;
 padding: 10px;
 width: 70vw;
 }
-.addForm input{
-    margin: 5px;
-
+#qualificaton-style{
+    display: flex;
 }
-.addForm label{
-    margin: 5px;
 
+#remove-btn{
+   width: 8vw;
+    height: fit-content;
+    margin: 10px auto;
+    border: none;
+    border-radius: 30px;
+    background-color: rgba(102, 35, 35, 0.555);   
+}
+#qualification-btn{
+   width: 10vw;
+    height: 35px;
+    margin: 10px auto;
+    border: none;
+    border-radius: 30px;
+    background-color: rgba(48, 53, 19, 0.555);  
+}
+#submit-btn{
+   width: 35vw;
+    height: 35px;
+    margin: 10px auto;
+    border: none;
+    border-radius: 30px;
+    background-color: rgba(48, 53, 19, 0.555);
+    
 }
 
 .job-details{
@@ -197,7 +273,7 @@ width: 70vw;
     justify-content: space-between;
     margin: 10px;
     padding: 10px;
-    background-color: rgb(137, 156, 95);
+   
 }
 .job-status{
     display: flex;
@@ -217,7 +293,7 @@ width: 70vw;
     padding: 8px 0;
 }
 #remote-style{
-    background-color: rgba(163, 185, 37, 0.555);
+    background-color: rgb(179, 192, 150);
     border: none;
     width: 25vw;
     height: 5vh;
@@ -225,10 +301,28 @@ width: 70vw;
     
 }
 #apply-btn{
-    width: 50vw;
+    width: 35vw;
     height: 35px;
     margin: 10px auto;
     border: none;
     border-radius: 30px;
-    background-color: rgba(163, 185, 37, 0.555);
+    background-color: rgba(48, 53, 19, 0.555);
+}
+.about{
+    width: 60vw;
+    margin: 10px auto;
+    border: 3px solid green;
+    padding: 7px;
+    border-radius: 30px;
+}
+
+.social-links{
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+   
+}
+.social-links img{
+    width: 50px;
+    margin: 2px 10px;
 }
